--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </slide>
 
         <!-- Short, Publishable Intro -->
-        <slide>
+        <!--<slide>
             <hgroup>
                 <h2>About Me</h2>
             </hgroup>
@@ -73,10 +73,10 @@
                     </li>
                 </ul>
             </article>
-        </slide>
+        </slide>-->
 
         <!-- Long, Fast Intro -->
-        <!--<slide class="fill nobackground lake-mcdonald">
+        <slide class="fill nobackground lake-mcdonald">
             <article class="text-large">Matt<br/>Raible</article>
         </slide>
 
@@ -122,7 +122,7 @@
             <article class="flexbox vcenter">
                 <img src="images/thebus-640.jpg" class="picture picture-frame">
             </article>
-        </slide>-->
+        </slide>
 
         <slide class="title-slide segue nobackground">
             <aside class="gdbar">
