Added slide for Tilt 3D

--- a/index.html
+++ b/index.html
@@ -260,6 +260,19 @@
             </aside>
         </slide>
 
+        <slide>
+            <hgroup>
+                <h2>Tilt 3D</h2>
+            </hgroup>
+            <article class="flexbox vcenter">
+                <img src="https://addons.cdn.mozilla.net/img/uploads/previews/full/62/62221.png?modified=1316938724"
+                     alt="Title 3D" class="picture">
+                <div class="picture-credit">
+                    <a href="https://addons.mozilla.org/en-us/firefox/addon/tilt/">https://addons.mozilla.org/en-us/firefox/addon/tilt/</a>
+                </div>
+            </article>
+        </slide>
+
         <!-- UI Refresh Project + Bootstrap -->
         <slide class="nobackground">
             <hgroup>
@@ -270,10 +283,10 @@
             </article>
             <aside class="note">
                 <section>
-                    Next, I started working on a new project - refreshing the UI. Nick, the Lead UX Designer at Taleo
-                    (at the time), had developed a number of mockups and presented it to the developers and product
-                    folks in early November. I listened to a WebEx of that meeting and learned that everyone thought
-                    it'd take 6-9 months to complete the work. They figured they could release the new design in Q3
+                    Next, I started working on a new project - refreshing the UI. <b>Nick, the Lead UX Designer</b> at Taleo
+                    (at the time), <b>had developed a number of mockups</b> and presented it to the developers and product
+                    folks in early November. I listened to a WebEx of that meeting and learned that everyone <b>thought
+                    it'd take 6-9 months to complete</b> the work. They figured they could release the new design in Q3
                     2012.
                 </section>
             </aside>
@@ -291,9 +304,9 @@
                 <section>
                     I offered to help with the redesign and do a
                     spike to help estimate. They agreed it'd be a good use of my time and I started working on it the
-                    week before Christmas. Since I'd used Twitter Bootstrap for my Play More! app, I recommended we use
+                    week before Christmas. Since <b>I'd used Twitter Bootstrap for my Play More!</b> app, I recommended we use
                     it as a foundation of the redesign. They agreed and I went to work. By the end of the week, I'd made
-                    good progress and told them I thought the redesign was possible in 2-3 months (including QA and
+                    good progress and told them I thought the <b>redesign was possible in 2-3 months</b> (including QA and
                     cross-browser compatibility).
 
                 </section>
@@ -313,10 +326,10 @@
             </article>
             <aside class="note">
                 <section>
-                    When I came back to work in January, we decided to split the redesign into two phases. Rather than moving
+                    When I came back to work in January, we decided to <b>split the redesign into two phases</b>. Rather than moving
                     elements around and introducing new features, we decided to do that in the 2nd phase. The 1st phase would entail
-                    simply re-skinning the existing UI, with minimal HTML changes. I spent a week refining my spike and integrating
-                    it into a branch. The next week, I switched images from individual images to CSS sprites.
+                    simply <b>re-skinning the existing UI, with minimal HTML changes</b>. I spent a week refining my spike and integrating
+                    it into a branch. <b>The next week, I switched images from individual images to CSS sprites</b>.
                 </section>
             </aside>
         </slide>
@@ -348,7 +361,9 @@
 </pre>
             </article>
             <aside class="note">
-                Next, I implemented a new theming system with different colors/icons and got everything looking good in Chrome, Safari and IE8/9.
+                <section>
+                    Next, I implemented a new theming system with different colors/icons and got everything looking good in Chrome, Safari and IE8/9.
+                </section>
             </aside>
         </slide>
 
@@ -466,7 +481,6 @@ a:hover { color: @linkHover }
                             <li>Used <code>{ zoom: 1; position: relative }</code> for negative top margins</li>
                             <li>Used <code>table-layout: fixed</code> so td widths would work</li>
                             <li>Used <code>position: fixed</code> to fix nav width</li>
-                            <!--<li><a href="http://theie8countdown.com/">http://theie8countdown.com</a></li>-->
                         </ul>
                     </li>
                 </ul>
@@ -657,7 +671,7 @@ a:hover { color: @linkHover }
             </article>
             <aside class="note">
                 <section>
-                    not considering these devices though is a big mistake
+                    Not considering these devices though is a big mistake
                 </section>
             </aside>
         </slide>
@@ -1852,8 +1866,10 @@ Click to toggle popover
                 <img src="images/less_nested.png">
             </article>
             <aside class="note">
-                <p>Rather than constructing long selector names to specify inheritance, in Less you can simply nest
-                    selectors inside other selectors. This makes inheritance clear and style sheets shorter.</p>
+                <section>
+                    <p>Rather than constructing long selector names to specify inheritance, in Less you can simply nest
+                        selectors inside other selectors. This makes inheritance clear and style sheets shorter.</p>
+                </section>
             </aside>
         </slide>
 
