Changed to publishable intro and added links to Trish's photos.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </slide>
 
         <!-- Short, Publishable Intro -->
-        <!--<slide>
+        <slide>
             <hgroup>
                 <h2>About Me</h2>
             </hgroup>
@@ -73,10 +73,10 @@
                     </li>
                 </ul>
             </article>
-        </slide>-->
+        </slide>
 
         <!-- Long, Fast Intro -->
-        <slide class="fill nobackground lake-mcdonald">
+        <!--<slide class="fill nobackground lake-mcdonald">
             <article class="text-large">Matt<br/>Raible</article>
         </slide>
 
@@ -122,7 +122,7 @@
             <article class="flexbox vcenter">
                 <img src="images/thebus-640.jpg" class="picture picture-frame">
             </article>
-        </slide>
+        </slide>-->
 
         <slide class="title-slide segue nobackground">
             <aside class="gdbar">
@@ -145,8 +145,9 @@
         </slide>
 
         <slide>
-            <img src="http://www.mcginityphoto.com/Nature/Nature/i-bfxThgg/0/M/Wash%20Park%20Sunset%20May%2029%202012-M.jpg" class="picture right"
-                    style="margin-right: 10px; margin-top: 80px">
+            <a href="http://www.mcginityphoto.com/Nature/Nature/4725995_szrsM#!i=1878390963">
+                <img src="http://www.mcginityphoto.com/Nature/Nature/i-bfxThgg/0/M/Wash%20Park%20Sunset%20May%2029%202012-M.jpg" class="picture right"
+                    style="margin-right: 10px; margin-top: 80px" alt="Sunset at Wash Park in Denver"></a>
             <hgroup>
                 <h2>My Experience</h2>
             </hgroup>
@@ -154,7 +155,7 @@
 
                 <img src="images/taleo-logo.png" style="margin: 0 0 30px 20px">
 
-                <ul>
+                <ul style="max-width: 300px">
                     <li>December 2011</li>
                     <li>Page Speed Project</li>
                     <li>UI Refresh Project</li>
@@ -319,7 +320,9 @@
                 <h2>CSS Image Sprites</h2>
             </hgroup>
             <article class="flexbox vcenter" style="margin-top: 16px">
-                <img src="http://farm9.staticflickr.com/8403/8669308528_1ed2c1e44d_z.jpg">
+                <a href="http://spritecow.com" style="border: 0">
+                    <img src="http://farm9.staticflickr.com/8403/8669308528_1ed2c1e44d_z.jpg" alt="Sprite Cow"></a>
+
                 <div class="link" style="margin-top: 10px">
                     <a href="http://css-tricks.com/css-sprites/">http://css-tricks.com/css-sprites/</a>
                 </div>
@@ -500,7 +503,9 @@ a:hover { color: @linkHover }
             <aside class="gdbar">
                 <img src="images/bootstrap_128.png">
             </aside>
-            <img src="http://www.mcginityphoto.com/Nature/Nature/i-g43rLLh/0/M/Icelandic%20Road%20from%20Bus-M.jpg" class="right picture">
+            <a href="http://www.mcginityphoto.com/Nature/Nature/4725995_szrsM#!i=2439893124&k=g43rLLh">
+                <img src="http://www.mcginityphoto.com/Nature/Nature/i-g43rLLh/0/M/Icelandic%20Road%20from%20Bus-M.jpg"
+                     class="right picture" alt="Icelandic Road from Bus"></a>
             <hgroup class="auto-fadein">
                 <h1>
                     Web Development
@@ -538,7 +543,7 @@ a:hover { color: @linkHover }
         <!-- NO IE6 -->
         <slide>
             <article class="flexbox vcenter">
-                <a href="http://ie6countdown.com"><img src="images/noie6.png"></a><br/>
+                <a href="http://ie6countdown.com" style="border: 0"><img src="images/noie6.png"></a><br/>
             </article>
             <aside class="note">
                 <section>
@@ -551,7 +556,7 @@ a:hover { color: @linkHover }
 
         <slide>
             <article class="flexbox vcenter">
-                <a href="http://theie7countdown.com"><img src="images/ie7-countdown.png"></a><br/>
+                <a href="http://theie7countdown.com" style="border: 0"><img src="images/ie7-countdown.png"></a><br/>
             </article>
             <aside class="note">
                 <section>
@@ -564,7 +569,7 @@ a:hover { color: @linkHover }
 
         <slide>
             <article class="flexbox vcenter">
-                <a href="http://theie8countdown.com"><img src="images/ie8-countdown.png"></a><br/>
+                <a href="http://theie8countdown.com" style="border: 0"><img src="images/ie8-countdown.png"></a><br/>
             </article>
             <aside class="note">
                 <section>
@@ -681,8 +686,9 @@ a:hover { color: @linkHover }
             <aside class="gdbar">
                 <img src="images/bootstrap_128.png">
             </aside>
-            <img src="http://www.mcginityphoto.com/Nature/Nature/i-cBpVPf6/1/M/AlmudenaCathedralMadrid2-M.jpg"
-                    class="right picture">
+            <a href="http://www.mcginityphoto.com/Nature/Nature/4725995_szrsM#!i=1723945240&k=cBpVPf6" style="border: 0" title="Almudena Cathedral Madrid">
+                <img src="http://www.mcginityphoto.com/Nature/Nature/i-cBpVPf6/1/M/AlmudenaCathedralMadrid2-M.jpg"
+                    class="right picture" alt="Almudena Cathedral Madrid"></a>
             <hgroup class="auto-fadein">
                 <h1>
                     Bootstrap
@@ -760,8 +766,10 @@ a:hover { color: @linkHover }
                 <h2>Reasons To Love Bootstrap</h2>
             </hgroup>
             <article>
-                <img src="http://www.mcginityphoto.com/Nature/Nature/i-8fkJ2tk/0/M/Happy%20Anniversary%21-M.jpg" class="picture right" style="margin-right: 50px">
-                <ul>
+                <a href="http://www.mcginityphoto.com/Nature/Nature/4725995_szrsM#!i=2219143296&k=8fkJ2tk" title="Happy 40th Anniversary Joe and Barb Raible! Kauai, Hawaii">
+                    <img src="http://www.mcginityphoto.com/Nature/Nature/i-8fkJ2tk/0/M/Happy%20Anniversary%21-M.jpg"
+                         alt="Happy 40th Anniversary Joe and Barb Raible! Kauai, Hawaii" class="picture right" style="margin-right: 50px"></a>
+                <ul style="max-width: 300px">
                     <li>For all skill levels</li>
                     <li>Documentation</li>
                     <li>Cross Everything</li>
@@ -784,7 +792,7 @@ a:hover { color: @linkHover }
                     <a href="http://twitter.com/fat"><img src="images/jacob-thornton.png" class="picture" width="450"></a>
                 </div>
 
-                <ul>
+                <ul style="max-width: 500px">
                     <li>
                         Early Days of Twitter
                         <ul>
@@ -822,8 +830,8 @@ a:hover { color: @linkHover }
             <aside class="gdbar">
                 <img src="images/bootstrap_128.png">
             </aside>
-            <img src="http://www.mcginityphoto.com/Nature/Nature/i-DtsWbjD/0/L/DSC_9984-L.jpg"
-                                class="right picture">
+            <a href="http://www.mcginityphoto.com/Nature/Nature/4725995_szrsM#!i=1827344164&k=DtsWbjD" style="border: 0" title="Way out in Arches, Utah">
+                <img src="http://www.mcginityphoto.com/Nature/Nature/i-DtsWbjD/0/L/DSC_9984-L.jpg" class="right picture" alt="Way out in Arches, Utah"></a>
             <hgroup class="auto-fadein">
                 <h1>
                     Getting Started
@@ -876,7 +884,9 @@ a:hover { color: @linkHover }
             <aside class="gdbar">
                 <img src="images/bootstrap_128.png">
             </aside>
-            <img src="http://www.mcginityphoto.com/Nature/Nature/i-vT885Nt/0/M/Dinner%20for%20the%20Eiffel%20Birds-M.jpg" class="picture right" width="500">
+            <a href="http://www.mcginityphoto.com/Nature/Nature/4725995_szrsM#!i=2438977987&k=vT885Nt" style="border: 0" title="Dinner for the Eiffel Birds">
+                <img src="http://www.mcginityphoto.com/Nature/Nature/i-vT885Nt/0/M/Dinner%20for%20the%20Eiffel%20Birds-M.jpg"
+                     class="picture right" width="500" alt="Dinner for the Eiffel Birds"></a>
             <hgroup class="auto-fadein">
                 <h1>
                     Scaffolding
@@ -1031,7 +1041,10 @@ a:hover { color: @linkHover }
             <aside class="gdbar">
                 <img src="images/bootstrap_128.png">
             </aside>
-            <img src="http://www.mcginityphoto.com/Nature/Nature/i-GKMKS2v/1/M/DSC_6901-M.jpg" class="picture right">
+            <a href="http://www.mcginityphoto.com/Nature/Nature/4725995_szrsM#!i=1723946131&k=GKMKS2v"
+               title="Independence Plaza Madrid Puerta de Alcala at night with car lights" style="border: 0">
+                <img src="http://www.mcginityphoto.com/Nature/Nature/i-GKMKS2v/1/M/DSC_6901-M.jpg"
+                     class="picture right" alt="Independence Plaza Madrid Puerta de Alcala at night with car lights"></a>
             <hgroup class="auto-fadein">
                 <h1>
                     Demo Time
@@ -1046,7 +1059,10 @@ a:hover { color: @linkHover }
             <aside class="gdbar">
                 <img src="images/bootstrap_128.png">
             </aside>
-            <img src="http://www.mcginityphoto.com/Nature/Nature/i-WLmNjZW/0/M/ArcdeTriumphNov2011-M.jpg" class="picture right">
+            <a href="http://www.mcginityphoto.com/Nature/Nature/4725995_szrsM#!i=1618568787&k=WLmNjZW"
+               title="Sunset at Arc de Triumph Paris, France" style="border: 0">
+                <img src="http://www.mcginityphoto.com/Nature/Nature/i-WLmNjZW/0/M/ArcdeTriumphNov2011-M.jpg"
+                     class="picture right" alt="Sunset at Arc de Triumph Paris, France"></a>
             <hgroup class="auto-fadein">
                 <h1>
                     Base CSS
@@ -1447,7 +1463,10 @@ auctor fringilla.&lt;/p&gt;
             <aside class="gdbar">
                 <img src="images/bootstrap_128.png">
             </aside>
-            <img src="http://www.mcginityphoto.com/Nature/Nature/i-m54KDHJ/0/M/St%20Regis%20Pool-M.jpg" class="picture right" width="500">
+            <a href="http://www.mcginityphoto.com/Nature/Nature/4725995_szrsM#!i=2219148434&k=m54KDHJ"
+               title="It was an epic sunset at Hanalei Bay at the St Regis pool :) Kauai, Hawaii" style="border: 0">
+                <img src="http://www.mcginityphoto.com/Nature/Nature/i-m54KDHJ/0/M/St%20Regis%20Pool-M.jpg"
+                     class="picture right" width="500" alt="It was an epic sunset at Hanalei Bay at the St Regis pool :) Kauai, Hawaii"></a>
             <hgroup class="auto-fadein">
                 <h1>
                     Components
@@ -1628,8 +1647,10 @@ auctor fringilla.&lt;/p&gt;
             <aside class="gdbar">
                 <img src="images/bootstrap_128.png">
             </aside>
-            <img src="http://www.mcginityphoto.com/Nature/Nature/i-BFBWhPM/1/M/BalcluthaMaritimeMuseumSanFran-M.jpg"
-                 class="picture right" width="500">
+            <a href="http://www.mcginityphoto.com/Nature/Nature/4725995_szrsM#!i=1702461000&k=BFBWhPM"
+               title="Balclutha Maritime Museum San Francisco California" style="border: 0">
+                <img src="http://www.mcginityphoto.com/Nature/Nature/i-BFBWhPM/1/M/BalcluthaMaritimeMuseumSanFran-M.jpg"
+                     class="picture right" width="500" alt="Balclutha Maritime Museum San Francisco California"></a>
             <hgroup class="auto-fadein">
                 <h1>
                    JavaScript for Bootstrap
@@ -1648,10 +1669,11 @@ auctor fringilla.&lt;/p&gt;
                 <h2>JavaScript Plugins: Overview</h2>
             </hgroup>
             <article class="smaller">
-
-                <img src="http://www.mcginityphoto.com/Nature/Nature/i-fkz9Xh2/3/L/chiclana%20walk-L.jpg" class="picture"
-                        style="position: absolute; right: 50px; top: 90px" height="550">
-                <ul>
+                <a href="http://www.mcginityphoto.com/Nature/Nature/4725995_szrsM#!i=644975370&k=fkz9Xh2"
+                   title="Cobblestone street, Vejer de la Frontera" style="border: 0">
+                    <img src="http://www.mcginityphoto.com/Nature/Nature/i-fkz9Xh2/3/L/chiclana%20walk-L.jpg" class="picture"
+                        style="position: absolute; right: 50px; top: 90px" height="550" alt="Cobblestone street, Vejer de la Frontera"></a>
+                <ul style="max-width: 600px">
                     <li>All plugins require the latest version of jQuery</li>
                     <li>
                         What Plugins do you need?
@@ -1786,8 +1808,10 @@ Click to toggle popover
             <aside class="gdbar">
                 <img src="images/css3-logo-128.png">
             </aside>
-            <img src="http://www.mcginityphoto.com/Nature/Nature/i-5VzHM9P/1/M/View%20from%20Ecola%20State%20Park%20Oregon-M.jpg"
-                 class="right picture">
+            <a href="http://www.mcginityphoto.com/Nature/Nature/4725995_szrsM#!i=1917260655&k=5VzHM9P"
+               title="Our hike along Ecola State Park ~ Indian Beach, Oregon" style="border: 0">
+                <img src="http://www.mcginityphoto.com/Nature/Nature/i-5VzHM9P/1/M/View%20from%20Ecola%20State%20Park%20Oregon-M.jpg"
+                     class="right picture" alt="Our hike along Ecola State Park ~ Indian Beach, Oregon"></a>
             <hgroup class="auto-fadein">
                 <h1>
                    LESS
@@ -1875,13 +1899,15 @@ Click to toggle popover
 
         <!-- LOOK AND FEEL -->
         <slide>
-            <img src="http://www.mcginityphoto.com/Nature/Colorado/i-pzDkPhV/0/S/Inside%20Coors%20Field-S.jpg"
-                 class="right picture" style="margin-right: 20px; margin-top: 40px;">
+            <a href="http://www.mcginityphoto.com/Nature/Colorado/21896375_jw7QCX#!i=2066655651&k=pzDkPhV"
+               title="View of Coors Field" style="border: 0">
+                <img src="http://www.mcginityphoto.com/Nature/Colorado/i-pzDkPhV/0/S/Inside%20Coors%20Field-S.jpg"
+                     class="right picture" style="margin-right: 20px; margin-top: 40px;" alt="View of Coors Field"></a>
             <hgroup>
                 <h2>Look & Feel</h2>
             </hgroup>
             <article>
-                <ul style="line-height: 1.2em">
+                <ul style="line-height: 1.2em; max-width: 700px">
                     <li>
                         Bootstrap Expo
                         <ul>
@@ -2067,8 +2093,11 @@ Click to toggle popover
                 <h2>Resources</h2>
             </hgroup>
             <article>
-                <img src="http://www.mcginityphoto.com/Nature/Nature/i-WmPhrCk/2/M/DSC_7899-M.jpg" class="right picture" style="margin-right: 0">
-                <ul>
+                <a href="http://www.mcginityphoto.com/Nature/Nature/4725995_szrsM#!i=1500209706&k=WmPhrCk"
+                   title="Sunset next to the palm trees on the beach at Hanalei Bay Kauai, Hawaii" style="border: 0">
+                    <img src="http://www.mcginityphoto.com/Nature/Nature/i-WmPhrCk/2/M/DSC_7899-M.jpg"
+                         class="right picture" style="margin-right: 0" alt="Sunset next to the palm trees on the beach at Hanalei Bay Kauai, Hawaii"></a>
+                <ul style="max-width: 650px">
                     <li>
                         My Presentations
                         <ul>
