Removed dash from hashtag

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <slides class="layout-widescreen">
 
         <!-- TITLE SLIDE -->
-        <slide class="title-slide segue nobackground first">
+        <slide class="title-slide segue  first">
             <aside class="gdbar">
                 <img src="images/html5-logo-128.png">
                 <img src="images/bootstrap_128.png">
                 <img src="images/css3-logo-128.png">
             </aside>
-            <div class="preview hawaii-rainbow"></div>
+            <div class="preview thailand-park" style="height: 375px"></div>
             <!-- The content of this hgroup is replaced programmatically through the
             slide_config.json. -->
-            <hgroup class="auto-fadein">
+            <hgroup class="auto-fadein" style="bottom: 80px">
                 <h1 data-config-title>
                     <!-- populated from slide_config.json -->
                 </h1>
@@ -138,7 +138,8 @@
                     <li>Overhauled CSS transitions and reinforced with JavaScript transitions as necessary</li>
                     <li>Dropped IE7 and FF3.6 support</li>
                     <li>Combined standard and responsive CSS into a single file</li>
-                    <li><a href="https://github.com/twitter/bootstrap/pull/6342">github.com/twitter/bootstrap/pull/6342</a></li>
+                    <li><a href="http://encosia.com/the-big-change-in-bootstrap-3-that-no-ones-talking-about/">100% faster</a> than 2.3.2</li>
+                    <!--<li><a href="https://github.com/twitter/bootstrap/pull/6342">github.com/twitter/bootstrap/pull/6342</a></li>-->
                 </ul>
             </article>
         </slide>
