Final changes after Devoxx 2013 and Nordic Speaking Tour

--- a/index.html
+++ b/index.html
@@ -897,7 +897,7 @@
 
                 <ul>
                     <li>
-                        Four Layouts
+                        Three Layouts
                         <ul>
                             <li>Vertical (default)</li>
                             <li>Inline</li>
